--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "login_ui",
-    "short_name": "login_ui",
+    "name": "ui_17",
+    "short_name": "ui_17",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
